[project]
name = "helix_chat"
version = "0.1.0"
description = "A Terminal-native AI chat interface"
authors = [
    { name = "Spartan-71", email = "anishdabhane71@gmail.com" }
]
license = { file = "LICENSE" }

keywords = [
    "helix",
    "terminal",
    "ai-chat",
    "TUI"
]

readme = "README.md"
requires-python = ">=3.10"

project.urls="https://github.com/Spartan-71/Helix"

dependencies = [
    "litellm>=1.72.2",
    "ollama>=0.5.1",
    "textual>=3.3.0",
    "textual-dev>=1.7.0",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[project.scripts]
helix = "helix_chat.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

requires-python = ">3.10"